libs/bng/test/negative/N0302_multiple_compartment_names.bngl
# FAIL
# OUTPUT: error: Compartment 'A' was already defined.


begin compartments
   A 2 1
   A 2 1
end compartments
